# advent_2022

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
scripts/: fix.sh  install-hooks.sh  pre-commit
src/: lib.rs  matrix.rs  primes.rs  tree.rs
