[package]
name = "euler"
version = "0.1.0"
authors = ["Mark Watson <git@markwatson.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
log = "0.4.17"
env_logger = "0.10.0"
regex = "1.7.0"
#petgraph = "0.6.2"
slab_tree = "0.3.2"
num-bigint = "0.4.3"